# FetchProductDataFromFackStor

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
App/modules/: CMakeLists.txt  DataProcessing.cpp  DataProcessing.hpp  FileOpration.hpp  ReceiveData.cpp  ReceiveData.hpp
